--- a/JS/V1/public_html/index.html
+++ b/JS/V1/public_html/index.html
@@ -122,8 +122,10 @@ R;1880;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;F;2388;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;</text
                                 }
                             }
                             lastF_px = ml_px;
-                            html += '<div class="logic_pulse" title="W,mks:' + w_mks + '" style="margin-left:' + ml_px + 'px; width:' + w_px + 'px;"></div>';
-                            //logic_pulse_text
+                            html += '<div class="logic_pulse" title="W,mks: ' + w_mks + '" style="margin-left:' + ml_px + 'px; width:' + w_px + 'px;"></div>';
+                            html += '<div class="logic_pulse_axis_x_point" title="mks from Sync: ' + R + '" style="margin-left:' + (ml_px - 4) + 'px; "></div>';
+                            html += '<div class="logic_pulse_axis_x_point" title="mks from Sync: ' + F_mks + '" style="margin-left:' + (ml_px + w_px - 4) + 'px; "></div>';
+
                         }
                         html += '<div class="logic_pulse_axis_x" style="margin-left:0px; width:' + lastF_px + 'px;"></div>';
                         html += '</div>';
@@ -284,10 +286,16 @@ R;1880;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;F;2388;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;</text
         display: inline-block;
         position: absolute;
     }
-    .logic_pulse_text{
-        font-size: 13px;
-        color:black;
+    .logic_pulse_axis_x_point{
+        height: 8px;
+        width: 8px;
+        border-radius: 4px;
+        margin-top: 18px;
+        background-color: gray;
         display: inline-block;
         position: absolute;
+    }
+    .logic_pulse_axis_x_point:hover{
+        background-color: red;
     }
 </style>
