--- a/JS/V1/public_html/index.html
+++ b/JS/V1/public_html/index.html
@@ -38,7 +38,7 @@ R;1880;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;F;2388;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;</text
             </div>
             <div class="row">
                 <div class="col-12 mt-2">
-                    <div id="map__logic_block" style="width: 100%; height:  300px; overflow: scroll;"></div>
+                    <div id="map__logic_block" style="width: 100%; height:  300px; overflow: scroll;position: relative;"></div>
                 </div>
                 <div class="col-12 mt-2">
                     <div id="map_palette"></div>
