--- a/JS/V1/public_html/index.html
+++ b/JS/V1/public_html/index.html
@@ -604,7 +604,7 @@ R;2416;2736;3832;4932;5708;10812;11176;12372;16888;17416;17744;0;0;0;0;0;F;2612;
 
                     const lines = $('#form_bathymetry__data_input').val().split(/\n/);
                     for (const line of lines) {
-                        let lat = 0, lng = 0, RR = [], FF = [];
+                        let RR = [], FF = [];
                         let depth_mks_isNeed = true;
                         let depth_mks = 0;
                         const raw = line.split(';');
@@ -648,6 +648,11 @@ R;2416;2736;3832;4932;5708;10812;11176;12372;16888;17416;17744;0;0;0;0;0;F;2612;
                             }
                         }
 
+
+                        for (const point of map__points) {
+                            map__point(point.lat, point.lng, point.depth);
+                        }
+
                         let html = '<div class="logic_pulses_block">';
                         let lastF_px = 0;
                         for (const R of RR) {
@@ -671,22 +676,7 @@ R;2416;2736;3832;4932;5708;10812;11176;12372;16888;17416;17744;0;0;0;0;0;F;2612;
                         html += '</div>';
                         $('#map__logic_block').append(html);
                     }
-                }
-
-                function map__bathymetryProcess() {
-
-
-
-
-
-
-                    for (const point of points) {
-                        if (point.lat > 0 && point.lng > 0) {
-                            map__point(point.lat, point.lng, point.depth);
-                        }
-                    }
-
-                }
+                }                 
 
                 function map__palette() {
                     for (const color of map__colors) {
