--- a/JS/V1/public_html/index.html
+++ b/JS/V1/public_html/index.html
@@ -558,6 +558,7 @@ R;2416;2736;3832;4932;5708;10812;11176;12372;16888;17416;17744;0;0;0;0;0;F;2612;
                 let map__mapIsReady = false;
                 let map__depth_min = 0;
                 let map__depth_max = 0;
+                let map__dataItemsCount = 0;
                 const map__colors = [
                     '#f51c03',
                     '#f45202',
@@ -594,6 +595,7 @@ R;2416;2736;3832;4932;5708;10812;11176;12372;16888;17416;17744;0;0;0;0;0;F;2612;
 
                 function map__getPulse_w_realBottom_mks_min(depth_mks) {
                     let pulse_w_realBottom_mks_min = 2000;//мин. ширина импульса, который считается отразившимся ото дна.
+                    return pulse_w_realBottom_mks_min;
                 }
 
                 function map__bathymetryProcess() {
@@ -649,6 +651,7 @@ R;2416;2736;3832;4932;5708;10812;11176;12372;16888;17416;17744;0;0;0;0;0;F;2612;
                             }
                         }
 
+
                         //MAP
                         const lat = parseFloat(raw[34]) || 0;
                         const lng = parseFloat(raw[35]) || 0;
@@ -672,17 +675,23 @@ R;2416;2736;3832;4932;5708;10812;11176;12372;16888;17416;17744;0;0;0;0;0;F;2612;
                         }
 
                         //LOGIC
-                        let html = '<div class="logic_pulses_block">';
-                        for (const pulse of pulses) {
-                            let ml_px = Math.round((pulse.R) / 10.0);
-                            let w_px = Math.round(pulse.W / 10.0);
-                            html += '<div class="logic_pulse" title="W,mks: ' + pulse.W + '" style="margin-left:' + ml_px + 'px; width:' + w_px + 'px;"></div>';
-                            html += '<div class="logic_pulse_axis_x_point" title="mks from Sync: ' + pulse.R + '" style="margin-left:' + (ml_px - 4) + 'px; "></div>';
-                            html += '<div class="logic_pulse_axis_x_point" title="mks from Sync: ' + pulse.F + '" style="margin-left:' + (ml_px + w_px - 4) + 'px; "></div>';
+                        if (map__dataItemsCount < 200) {
+                            let html = '<div class="logic_pulses_block">';
+                            let lastF = 0;
+                            for (const pulse of pulses) {
+                                let ml_px = Math.round((pulse.R) / 10.0);
+                                let w_px = Math.round(pulse.W / 10.0);
+                                html += '<div class="logic_pulse" title="W,mks: ' + pulse.W + '" style="margin-left:' + ml_px + 'px; width:' + w_px + 'px;"></div>';
+                                html += '<div class="logic_pulse_axis_x_point" title="mks from Sync: ' + pulse.R + '" style="margin-left:' + (ml_px - 4) + 'px; "></div>';
+                                html += '<div class="logic_pulse_axis_x_point" title="mks from Sync: ' + pulse.F + '" style="margin-left:' + (ml_px + w_px - 4) + 'px; "></div>';
+                                lastF = pulse.F;
+                            }
+                            html += '<div class="logic_pulse_axis_x" style="margin-left:0px; width:' + lastF + 'px;"></div>';
+                            html += '</div>';
+                            $('#map__logic_block').append(html);
                         }
-                        html += '<div class="logic_pulse_axis_x" style="margin-left:0px; width:' + pulse.F + 'px;"></div>';
-                        html += '</div>';
-                        $('#map__logic_block').append(html);
+
+                        map__dataItemsCount++;
                     }
 
                     for (let index in map__pointsLatLng) {
