--- a/JS/V1/public_html/index.html
+++ b/JS/V1/public_html/index.html
@@ -11,7 +11,10 @@
         <main class="container">
             <div class="row">
                 <div class="col">
-                    <h2>Bathymetry</h2>
+                    <h2>
+                        Bathymetry 
+                        <span id="bathymetry__points_count"></span>
+                    </h2>
                     <div class="row">                        
                         <div class="col-auto">
                             <div class="" style="width: 170px">
@@ -547,7 +550,11 @@ R;2416;2736;3832;4932;5708;10812;11176;12372;16888;17416;17744;0;0;0;0;0;F;2612;
                     <div id="map__logic_block"></div>
                 </div>
                 <div class="col-12 mt-2 bm-4">
-                    <div id="map_palette"></div>
+                    <div class="d-block">
+                        <div id="map_palette_min_text" class="d-inline-block"></div>
+                        <div class="d-inline-block"><div id="map_palette"></div></div>
+                        <div id="map_palette_max_text" class="d-inline-block"></div>
+                    </div>
                     <div id="map__bathymetry_block" style="width: 100%; height: 500px; margin: 4px 0px;"></div>
                 </div>
             </div>
@@ -580,11 +587,12 @@ R;2416;2736;3832;4932;5708;10812;11176;12372;16888;17416;17744;0;0;0;0;0;F;2612;
 
                 document.addEventListener('DOMContentLoaded', function () {
                     ymaps.ready(map__init);
+                    map__palette();
+                    map__actions();
                 });
 
                 function map__render() {
-                    map__palette();
-                    map__actions();
+
                 }
 
                 function map__actions() {
@@ -594,8 +602,13 @@ R;2416;2736;3832;4932;5708;10812;11176;12372;16888;17416;17744;0;0;0;0;0;F;2612;
                 }
 
                 function map__getPulse_w_realBottom_mks_min(depth_mks) {
-                    let pulse_w_realBottom_mks_min = 2000;//мин. ширина импульса, который считается отразившимся ото дна.
-                    return pulse_w_realBottom_mks_min;
+                    if (depth_mks < 1500) {
+                        return 1200;
+                    }
+                    if (depth_mks < 3000) {
+                        return 3000;
+                    }
+                    return 3200;
                 }
 
                 function map__bathymetryProcess() {
@@ -675,7 +688,7 @@ R;2416;2736;3832;4932;5708;10812;11176;12372;16888;17416;17744;0;0;0;0;0;F;2612;
                         }
 
                         //LOGIC
-                        if (map__dataItemsCount < 200) {
+                        if (map__dataItemsCount < 500) {
                             let html = '<div class="logic_pulses_block">';
                             let lastF = 0;
                             for (const pulse of pulses) {
@@ -694,10 +707,16 @@ R;2416;2736;3832;4932;5708;10812;11176;12372;16888;17416;17744;0;0;0;0;0;F;2612;
                         map__dataItemsCount++;
                     }
 
-                    for (let index in map__pointsLatLng) {
-                        const ll = index.split(/_/);
-                        map__point(ll[0], ll[1], map__pointsLatLng[index]);
+                    if (map__mapIsReady) {
+                        for (let index in map__pointsLatLng) {
+                            const ll = index.split(/_/);
+                            map__point(ll[0], ll[1], map__pointsLatLng[index]);
+                        }
                     }
+
+                    $('#bathymetry__points_count').html(map__dataItemsCount + ' points');
+                    $('#map_palette_min_text').html(map__depth_min + ' m');
+                    $('#map_palette_max_text').html(map__depth_max + ' m');
                 }
 
                 function map__palette() {
@@ -707,16 +726,16 @@ R;2416;2736;3832;4932;5708;10812;11176;12372;16888;17416;17744;0;0;0;0;0;F;2612;
                     }
                 }
 
-                const map_onReady_promise = new Promise((resolve, reject) => {
-                    const timerId = setInterval(function () {
-                        if (map__mapIsReady) {
-                            clearInterval(timerId);
-                            resolve();
-                        }
-                    }, 1000);
-                });
-
-                map_onReady_promise.then(map__render);
+                /*const map_onReady_promise = new Promise((resolve, reject) => {
+                 const timerId = setInterval(function () {
+                 if (map__mapIsReady) {
+                 clearInterval(timerId);
+                 resolve();
+                 }
+                 }, 1000);
+                 });
+                 
+                 map_onReady_promise.then(map__render);*/
 
                 function map__init() {
                     /* ymaps.geolocation.get().then(function (res) {
